--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/yerx/chat-messaging-board-React-GraphQL-Typescript-app#readme",
   "devDependencies": {
+    "@types/express": "^4.17.8",
     "@types/node": "^14.6.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
@@ -32,7 +33,11 @@
     "@mikro-orm/core": "^4.0.0-alpha.0",
     "@mikro-orm/migrations": "^4.0.0-alpha.0",
     "@mikro-orm/postgresql": "^4.0.0-alpha.0",
-    "pg": "^8.3.2"
+    "apollo-server-express": "^2.17.0",
+    "express": "^4.17.1",
+    "graphql": "^15.3.0",
+    "pg": "^8.3.2",
+    "type-graphql": "^1.0.0"
   },
   "mikro-orm": {
     "useTsNode": true,
