--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
     "start2": "ts-node src/index.ts",
-    "dev2": "nodemon --exec ts-node src/index.ts"
+    "dev2": "nodemon --exec ts-node src/index.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,10 +23,18 @@
   },
   "homepage": "https://github.com/yerx/chat-messaging-board-React-GraphQL-Typescript-app#readme",
   "devDependencies": {
+    "@types/enzyme": "^3.10.6",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.13",
     "@types/node": "^14.6.0",
     "class-validator": "^0.12.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "enzyme-to-json": "^3.5.0",
+    "jest": "^26.4.2",
     "nodemon": "^2.0.4",
+    "ts-jest": "^26.3.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   },
