--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "jsx": "react"
   },
   "exclude": [
     "node_modules"
