--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/index.js",
     "start2": "ts-node src/index.ts",
     "dev2": "nodemon --exec ts-node src/index.ts",
-    "test": "jest"
+    "test": "jest",
+    "create:migration": "mikro-orm migration:create"
   },
   "repository": {
     "type": "git",
