--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   },
   "homepage": "https://github.com/yerx/chat-messaging-board-React-GraphQL-Typescript-app#readme",
   "devDependencies": {
+    "@types/connect-redis": "^0.0.14",
     "@types/enzyme": "^3.10.6",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/express": "^4.17.8",
+    "@types/express-session": "^1.17.0",
     "@types/jest": "^26.0.13",
     "@types/node": "^14.6.0",
+    "@types/redis": "^2.8.27",
     "class-validator": "^0.12.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
@@ -46,9 +49,12 @@
     "@mikro-orm/postgresql": "^4.0.0-alpha.0",
     "apollo-server-express": "^2.17.0",
     "argon2": "^0.27.0",
+    "connect-redis": "^5.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.3.0",
     "pg": "^8.3.2",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.0.0"
   },
